[package]
name = "hv1-tls-eof"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.0.1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24.1"
rustls-pemfile = "1.0.4"
rustls = "0.21.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
